# dock2tauri

./: .env.example  .gitignore  Dockerfile  Dockerfile.test  Makefile  README.md  TODO.md  todo.md
app/: index.html  index.js
docs/: ARCHITECTURE.md  CONTRIBUTING.md  ROADMAP.md  TROUBLESHOOTING.md
examples/pwa-counter/: Dockerfile
examples/pwa-counter/app/: index.html
examples/pwa-hello/: Dockerfile
examples/pwa-hello/app/: index.html
examples/pwa-notes/: Dockerfile
examples/pwa-notes/app/: index.html
scripts/: build-bundles-fixed.sh  build-bundles.sh  diagnose-and-fix.sh  dock2tauri.js  dock2tauri.py  dock2tauri.sh  install.sh  install_deps.sh  install_rpm_package.sh  run-app.sh  setup.sh  test-build.sh  test-bundle-generation.sh  ultimate-bundle-fix.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.conf.json.backup  tauri.conf.json.diagnostic-backup
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/bash/: test_scripts.sh
tests/e2e/: cypress.config.js  package-lock.json  package.json  playwright.config.ts
tests/e2e/cypress/e2e/: docker-ui.cy.js
tests/e2e/cypress/support/: commands.js  e2e.js
tests/e2e/src/: docker-management.spec.ts
tests/integration/: Cargo.toml
tests/integration/tests/: backend_commands.rs
tests/workflow/: test_build_install.py
