[package]
name = "dock2tauri-integration-tests"
version = "1.0.0"
edition = "2021"
description = "Integration tests for Dock2Tauri Rust backend"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "backend_commands"
path = "tests/backend_commands.rs"

[profile.test]
opt-level = 0
debug = true
